[gd_scene load_steps=2 format=3 uid="uid://lgdcjq8scpdh"]

[ext_resource type="Script" uid="uid://bh8wdbg3jd0p7" path="res://scripts/CodeEditorImproved.gd" id="1_l85x1"]

[node name="CodeEditorImproved" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 26.0
offset_right = -1688.0
offset_bottom = -654.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l85x1")

[node name="PanelBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -28.0
offset_bottom = 30.0
grow_horizontal = 2
mouse_filter = 1

[node name="TitleLabel" type="Label" parent="TitleBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -11.5
offset_right = 210.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Code Editor"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="TitleBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -15.0
offset_right = -5.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
text = "Ã—"

[node name="EditorContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="EditorBox" type="HBoxContainer" parent="EditorContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="EditorContainer/EditorBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.9
text = "# Write your code here!"
scroll_smooth = true
caret_blink = true
highlight_current_line = true
draw_tabs = true

[node name="ButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="RunButton" type="Button" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -15.0
offset_right = 52.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Run"

[node name="ResizeHandle" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 12

[connection signal="gui_input" from="TitleBar" to="." method="_on_title_bar_gui_input"]
[connection signal="pressed" from="TitleBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="text_changed" from="EditorContainer/EditorBox/TextEdit" to="." method="_on_text_changed"]
[connection signal="pressed" from="ButtonPanel/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="gui_input" from="ResizeHandle" to="." method="_on_resize_handle_gui_input"]
